--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,10 @@
         android:theme="@style/Theme.Uotan"
         tools:targetApi="31">
         <activity
-            android:name=".resource.ResourceActivity"
+            android:name=".user.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".article.ArticleActivity"
-            android:exported="false" />
-        <activity
-            android:name=".plate.PlateActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
